Fix: adjust the alignment of guess button

--- a/src/style.css
+++ b/src/style.css
@@ -154,6 +154,14 @@ body {
   position: relative;
   margin-bottom: 30px;
   margin-left: 30px;
+  
+}
+
+
+.guess-input-button-container{
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
 
 
@@ -178,7 +186,7 @@ body {
 }
 
 
-.button-container {
+.guess-bar-button-container {
   position: absolute;
   bottom: 20px;
   margin-left: 5px;
